# hREA

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CONTRIBUTORS.md  CONTRIBUTORS.txt  Cargo.toml  LICENSE  README.md  completions.md  conductor-config.toml  config.nix  default.nix  flake.nix  keyfile.agent1.txt  keyfile.txt  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.circleci/: config.yml
.github/: FUNDING.yml
.github/workflows/: release.yml  test.yml
apps/holorea-graphql-explorer/: package.json
apps/hrea-graphql-explorer/: .gitignore  README.md  package.json
apps/rediffusa/: package.json
bundles/full_suite/: happ.yaml
bundles/obs_and_agent/: happ.yaml
bundles/web-app/: web-happ.yaml
bundles_templates/full_suite_release_template/: happ.yaml
docs/: Contributor-workflow.md  README.md  Workflow-automation.md  completions.md  repository-structure.md  system_of_record_comparison.md
example/custom-resource-attributes/: app.json  build-deps.sh
example/holorea-graphql-explorer/: README.md  package.json
example/knowledge-system-extensions/: .hcignore  app.json  build-deps.sh
happs/: README.md
happs/agent/: app.json  dna.yaml
happs/agent.dna.workdir/: dna.json  dna.yaml
happs/agreement/: app.json  dna.yaml
happs/agreement.dna.workdir/: dna.json
happs/observation/: app.json  dna.yaml
happs/observation.dna.workdir/: dna.json
happs/planning/: app.json  dna.yaml
happs/planning.dna.workdir/: dna.json  dna.yaml
happs/proposal/: app.json  dna.yaml
happs/proposal.dna.workdir/: dna.json
happs/specification/: .hcignore  app.json  dna.yaml
happs/specification.dna.workdir/: dna.json  dna.yaml
happs/specification_DEPRECATED/: .hcignore
holo-rea-dht/: Cargo.toml  README.md  package.json
holo-rea-dht/core/: Cargo.toml  mod.rs  vf_core.rs
holo-rea-dht/core/src/: vf_core.rs
holo-rea-dht/test/: __init.js  index.js
lib/: Cargo.toml  app.json  package.json
lib/core/: Cargo.toml
lib/hdk_graph_helpers/: Cargo.toml  README.md
lib/hdk_graph_helpers/src/: anchor_helpers.rs  entry_helpers.rs  identity_helpers.rs  internals.rs  key_helpers.rs  lib.rs  link_helpers.rs  local_index_helpers.rs  maybe_undefined.rs  record_helpers.rs  record_interface.rs  remote_index_helpers.rs  rpc_helpers.rs  type_wrappers.rs
lib/hdk_indexing_core/: Cargo.toml
lib/hdk_link_rules/: Cargo.toml
lib/hdk_records/: Cargo.toml  README.md
lib/hdk_records/src/: anchored_record_helpers.rs  entry_helpers.rs  foreign_index_helpers.rs  identity_helpers.rs  index_retrieval_helpers.rs  internals.rs  lib.rs  link_helpers.rs  local_index_helpers.rs  metadata_helpers.rs  record_helpers.rs  record_interface.rs  remote_index_helpers.rs  rpc_helpers.rs
lib/hdk_relay_pagination/: Cargo.toml
lib/hdk_rpc_errors/: Cargo.toml
lib/hdk_rpc_errors/src/: lib.rs
lib/hdk_semantic_indexes/: README.md
lib/hdk_semantic_indexes/client/: Cargo.toml
lib/hdk_semantic_indexes/client/src/: lib.rs
lib/hdk_semantic_indexes/integrity_zome/: Cargo.toml
lib/hdk_semantic_indexes/integrity_zome/src/: lib.rs
lib/hdk_semantic_indexes/rpc/: Cargo.toml
lib/hdk_semantic_indexes/rpc/src/: lib.rs
lib/hdk_semantic_indexes/zome/: Cargo.toml
lib/hdk_semantic_indexes/zome/src/: lib.rs
lib/hdk_semantic_indexes/zome_derive/: Cargo.toml
lib/hdk_semantic_indexes/zome_derive/src/: lib.rs
lib/hdk_time_indexing/: Cargo.toml
lib/hdk_time_indexing/src/: index_tree.rs  lib.rs  reading.rs  sorting.rs  writing.rs
lib/hdk_time_indexing/tests/: Cargo.toml
lib/hdk_time_indexing/tests/src/: data_structures.rs  empty_indexes.rs  helper_macros.rs  lib.rs
lib/hdk_type_serialization_macros/: Cargo.toml  README.md
lib/hdk_uuid_types/: Cargo.toml  README.md
lib/hdk_uuid_types/src/: lib.rs
lib/holo_dht_reducer/: Cargo.toml
lib/integrity_types/: Cargo.toml
lib/link-rules/: Cargo.toml
lib/link-rules/src/: lib.rs  link_rules.rs  link_set.rs
lib/rea_agreement/defs/: Cargo.toml
lib/rea_agreement/defs/src/: lib.rs
lib/rea_agreement/lib/: Cargo.toml
lib/rea_agreement/lib/src/: lib.rs
lib/rea_agreement/rpc/: Cargo.toml
lib/rea_agreement/rpc/src/: lib.rs
lib/serde_datetime_millis/: Cargo.toml
lib/serde_datetime_millis/src/: lib.rs
lib/serde_maybe_undefined/: Cargo.toml
lib/temp_path/: Cargo.toml
lib/vf-core/: Cargo.toml
lib/vf_actions/: Cargo.toml
lib/vf_actions/src/: builtins.rs  lib.rs
lib/vf_attributes_hdk/: Cargo.toml
lib/vf_attributes_hdk/src/: lib.rs
lib/vf_core/: Cargo.toml
lib/vf_core/src/: lib.rs  location.rs  measurement.rs  type_aliases.rs  vf_record.rs
lib/vf_core/src/observation/: mod.rs
lib/vf_core/src/planning/: mod.rs
lib/vf_knowledge/: Cargo.toml
lib/vf_knowledge/src/: lib.rs
lib/vf_knowledge/src/action/: builtins.rs  mod.rs
lib/vf_measurement/: Cargo.toml
lib/vf_measurement/src/: lib.rs
lib/vf_observation/: Cargo.toml
lib/vf_observation/src/: economic_event.rs  economic_resource.rs  lib.rs  process.rs
lib/vf_planning/: Cargo.toml
lib/vf_planning/src/: commitment.rs  fulfillment.rs  intent.rs  lib.rs  satisfaction.rs
lib/vf_specification/: Cargo.toml  zome.json
lib/vf_specification/code/: Cargo.toml
lib/vf_specification/code/src/: lib.rs  process_specification.rs  resource_specification.rs  unit.rs
lib/vf_specification/src/: lib.rs  process_specification.rs  resource_specification.rs  unit.rs
nix/: sources.json
scripts/: clean-build.sh  clean-modules.sh  fixReactAppSourceMaps.js  fixTryoramaTimeout.js  integration-tests.sh  package-dnas.sh  package-webhapp.sh  patch-react-scripts-webpack-config.js  postinstall.sh  preinstall.sh  run-dev-conductor.sh  run-unit-tests.sh
test/: .eslintrc  .skip_tests  graphql-logger-middleware.js  index.js  init.js  package.json  test_event_fulfillments.js
webhapp/: web-happ.yaml
zomes/agent_registration/: Cargo.toml
zomes/agent_registration/src/: lib.rs
zomes/dna_auth_resolver/: Cargo.toml
zomes/dna_auth_resolver/src/: lib.rs
zomes/dna_auth_resolver_integrity/: Cargo.toml
zomes/dna_auth_resolver_integrity/src/: lib.rs
(+921 files in other folders)
