[workspace]

members= [
  "lib/hdk_graph_helpers",
  "lib/vf_core",
  "lib/vf_actions",
  "lib/rea_commitment/defs",
  "lib/rea_commitment/lib",
  "lib/rea_commitment/storage",
  "lib/rea_commitment/storage_consts",
  "lib/rea_commitment/rpc",
  "lib/rea_economic_event/defs",
  "lib/rea_economic_event/lib",
  "lib/rea_economic_event/storage",
  "lib/rea_economic_event/storage_consts",
  "lib/rea_economic_event/rpc",
  "lib/rea_economic_resource/defs",
  "lib/rea_economic_resource/lib",
  "lib/rea_economic_resource/storage",
  "lib/rea_economic_resource/storage_consts",
  "lib/rea_economic_resource/rpc",
  "lib/rea_fulfillment/defs",
  "lib/rea_fulfillment/lib_origin",
  "lib/rea_fulfillment/lib_destination",
  "lib/rea_fulfillment/storage",
  "lib/rea_fulfillment/storage_consts",
  "lib/rea_fulfillment/rpc",
  "lib/rea_intent/defs",
  "lib/rea_intent/lib",
  "lib/rea_intent/storage",
  "lib/rea_intent/storage_consts",
  "lib/rea_intent/rpc",
  "lib/rea_process/defs",
  "lib/rea_process/lib",
  "lib/rea_process/storage",
  "lib/rea_process/storage_consts",
  "lib/rea_process/rpc",
  "lib/rea_process_specification/defs",
  "lib/rea_process_specification/lib",
  "lib/rea_process_specification/storage",
  "lib/rea_process_specification/storage_consts",
  "lib/rea_process_specification/rpc",
  "lib/rea_proposal/defs",
  "lib/rea_proposal/lib",
  "lib/rea_proposal/storage",
  "lib/rea_proposal/storage_consts",
  "lib/rea_proposal/rpc",
  "lib/rea_proposed_intent/defs",
  "lib/rea_proposed_intent/lib",
  "lib/rea_proposed_intent/storage",
  "lib/rea_proposed_intent/storage_consts",
  "lib/rea_proposed_intent/rpc",
  "lib/rea_proposed_to/defs",
  "lib/rea_proposed_to/lib",
  "lib/rea_proposed_to/storage",
  "lib/rea_proposed_to/storage_consts",
  "lib/rea_proposed_to/rpc",
  "lib/rea_resource_specification/defs",
  "lib/rea_resource_specification/lib",
  "lib/rea_resource_specification/storage",
  "lib/rea_resource_specification/storage_consts",
  "lib/rea_resource_specification/rpc",
  "lib/rea_satisfaction/defs",
  "lib/rea_satisfaction/lib_origin",
  "lib/rea_satisfaction/lib_destination",
  "lib/rea_satisfaction/storage",
  "lib/rea_satisfaction/storage_consts",
  "lib/rea_satisfaction/rpc",
  "lib/rea_unit/defs",
  "lib/rea_unit/lib",
  "lib/rea_unit/storage",
  "lib/rea_unit/storage_consts",
  "lib/rea_unit/rpc",
  "happs/observation/zomes/economic_event/code",
  "happs/observation/zomes/economic_resource/code",
  "happs/observation/zomes/fulfillment/code",
  "happs/observation/zomes/satisfaction/code",
  "happs/observation/zomes/process/code",
  "happs/observation/zomes/resource_specification/code",
  "happs/planning/zomes/commitment/code",
  "happs/planning/zomes/fulfillment/code",
  "happs/planning/zomes/intent/code",
  "happs/planning/zomes/satisfaction/code",
  "happs/planning/zomes/process/code",
  "happs/specification/zomes/resource_specification/code",
  "happs/specification/zomes/process_specification/code",
  "happs/specification/zomes/unit/code",
  "happs/specification/zomes/action/code",
  "happs/proposal/zomes/proposal/code",
  "happs/proposal/zomes/proposed_intent/code",
  "happs/proposal/zomes/proposed_to/code",
  "example/knowledge-system-extensions/zomes/beef_resource_specification/code",
  "example/custom-resource-attributes/zomes/beef_economic_event/code",
  "example/custom-resource-attributes/zomes/beef_economic_resource/code",
]
