[workspace]

members= [
	# Core framework

  "lib/hdk_graph_helpers",
  "lib/vf_core",
  # "lib/vf_actions",

  #-----------------------------------
  #
  # REA-on-Holochain modules
  #
  # zome: Source code for part of an application 'Cell'. A discrete bundle of logic,
  #       compiled to WASM, that can be combined with other 'zomes' to create application
  #       'DNAs' which service different combinations of functionality.
  #       Holochain network participants all execute the same 'DNA' individually to boot
  #       up their 'Cell' and connect to other 'Cells' on the network.
  #
  # lib:  Library code forming the bulk of the logic of the zome, provided separately such
  #       that it can be imported by other zome authors and mixed in with different logic
  #       in other apps.
  #
  # rpc:  Struct definitions necessary to interface with Holo-REA 'zomes' via their API.
  #       External Rust applications can use these to build interfaces into Holo-REA
  #       networks, and third-party zomes can use them internally to communicate back
  #       and forth with REA components running inside their Holochain conductor.
  #
  # storage & storage_consts: definitions for the internal data structures saved to agent
  #       sourcechains and the shared network space inside Holo-REA DNA components.
  #       Composable zomes built to augment, restrict or extend Holo-REA's base functionality
  #       may use these struct definitions to interact with Holo-REA data inside the same DNA.
  #
  # zome_idx_*: specialised indexing zomes used to track references to data kept inside
  #       a foreign 'Cell'. Note that some kinds of records only exist as indexes and are
  #       really entities that reside liminally between network membranes.
  #
  #-----------------------------------

  # "lib/rea_action/zome",
  # "lib/rea_agent/rpc",  :TODO: update https://github.com/holochain-open-dev/agent-registration/ for RSM
  # "lib/rea_agent/zome",
  "lib/rea_agreement/lib",
  "lib/rea_agreement/rpc",
  "lib/rea_agreement/storage",
  "lib/rea_agreement/storage_consts",
  "lib/rea_agreement/zome",
  # "lib/rea_agreement/zome_idx_observation", :TODO: decide on how to expose indexes as search parameters
  # "lib/rea_agreement/zome_idx_planning",
  # "lib/rea_commitment/lib",
  # "lib/rea_commitment/rpc",
  # "lib/rea_commitment/storage",
  "lib/rea_commitment/storage_consts",
  # "lib/rea_commitment/zome",
  "lib/rea_commitment/zome_idx_agreement",
  # "lib/rea_commitment/zome_idx_observation",
  # "lib/rea_economic_event/lib",
  "lib/rea_economic_event/rpc",
  "lib/rea_economic_event/storage",
  "lib/rea_economic_event/storage_consts",
  # "lib/rea_economic_event/zome",
  "lib/rea_economic_event/zome_idx_agreement",
  # "lib/rea_economic_resource/lib",
  "lib/rea_economic_resource/rpc",
  "lib/rea_economic_resource/storage",
  "lib/rea_economic_resource/storage_consts",
  # "lib/rea_economic_resource/zome",
  # "lib/rea_fulfillment/lib",
  # "lib/rea_fulfillment/lib_destination",
  # "lib/rea_fulfillment/lib_origin",
  # "lib/rea_fulfillment/rpc",
  # "lib/rea_fulfillment/storage",
  # "lib/rea_fulfillment/storage_consts",
  # "lib/rea_fulfillment/zome_idx_observation",
  # "lib/rea_fulfillment/zome_idx_planning",
  # "lib/rea_intent/lib",
  # "lib/rea_intent/rpc",
  # "lib/rea_intent/storage",
  "lib/rea_intent/storage_consts",
  # "lib/rea_intent/zome",
  # "lib/rea_intent/zome_idx_observation",
  # "lib/rea_process/lib",
  # "lib/rea_process/rpc",
  # "lib/rea_process/storage",
  "lib/rea_process/storage_consts",
  # "lib/rea_process/zome",
  # "lib/rea_process/zome_idx_planning",
  # "lib/rea_process_specification/lib",
  # "lib/rea_process_specification/rpc",
  # "lib/rea_process_specification/storage",
  # "lib/rea_process_specification/storage_consts",
  # "lib/rea_process_specification/zome",
  # "lib/rea_proposal/lib",
  # "lib/rea_proposal/rpc",
  # "lib/rea_proposal/storage",
  # "lib/rea_proposal/storage_consts",
  # "lib/rea_proposal/zome",
  # "lib/rea_proposed_intent/lib_destination_planning",
  # "lib/rea_proposed_intent/lib_origin",
  # "lib/rea_proposed_intent/rpc",
  # "lib/rea_proposed_intent/storage",
  # "lib/rea_proposed_intent/storage_consts",
  # "lib/rea_proposed_intent/zome",
  # "lib/rea_proposed_intent/zome_idx_planning",
  # "lib/rea_proposed_to/lib",
  # "lib/rea_proposed_to/rpc",
  # "lib/rea_proposed_to/storage",
  # "lib/rea_proposed_to/storage_consts",
  # "lib/rea_proposed_to/zome",
  # "lib/rea_resource_specification/lib",
  "lib/rea_resource_specification/rpc",
  # "lib/rea_resource_specification/storage",
  # "lib/rea_resource_specification/storage_consts",
  # "lib/rea_resource_specification/zome",
  # "lib/rea_resource_specification/zome_idx_observation",
  # "lib/rea_satisfaction/lib",
  # "lib/rea_satisfaction/lib_destination",
  # "lib/rea_satisfaction/lib_origin",
  # "lib/rea_satisfaction/rpc",
  # "lib/rea_satisfaction/storage",
  # "lib/rea_satisfaction/storage_consts",
  # "lib/rea_satisfaction/zome_idx_observation",
  # "lib/rea_satisfaction/zome_idx_planning",
  # "lib/rea_unit/lib",
  # "lib/rea_unit/rpc",
  # "lib/rea_unit/storage",
  # "lib/rea_unit/storage_consts",
  # "lib/rea_unit/zome",

	# Example customisations
  # "example/knowledge-system-extensions/zomes/beef_resource_specification/code",
  # "example/custom-resource-attributes/zomes/beef_economic_event/code",
  # "example/custom-resource-attributes/zomes/beef_economic_resource/code",

	# Third-party git dependencies
	# "thirdparty/happ-agent-registration/lib/lib",
	# "thirdparty/happ-agent-registration/lib/storage",
	# "thirdparty/happ-agent-registration/lib/storage_consts",
	# "thirdparty/happ-agent-registration/happs/agent-registration-open/zomes/agent_registration/code",
	# "thirdparty/happ-agent-registration/thirdparty/happ-social-triangulation/code",
]
