[package]
name = "holorea_core"
version = "0.1.0"
authors = ["pospi <pospi@spadgos.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
# :DUPE: hdk-rust-revid
hdk = { git = "https://github.com/holochain/holochain-rust", rev = "4c442073" }
holochain_core_types_derive = { git = "https://github.com/holochain/holochain-rust", rev = "4c442073" }

[lib]
path = "src/mod.rs"
crate-type = ["lib"]
