[package]
name = "hdk_graph_helpers"
version = "0.1.0"
authors = ["pospi <pospi@spadgos.com>"]
edition = "2018"

[dependencies]
thiserror = "1.0"
serde = "1"
# :DUPE: hdk-rust-revid
hdk3 = {git = "https://github.com/holochain/holochain", rev = "4e1de9c22", package = "hdk3"}

[lib]
crate-type = ["lib"]
