[package]
name = "hdk_records"
version = "0.1.0"
authors = ["pospi <pospi@spadgos.com>"]
edition = "2018"

[dependencies]
thiserror = "1.0"
serde = "1"
chrono = "0.4"
hdk = "0.0.142"
holo_hash = "0.0.30"

serde_maybe_undefined = { path = "../serde_maybe_undefined" }
hdk_rpc_errors = { path = "../hdk_rpc_errors" }
hdk_semantic_indexes_zome_rpc = { path = "../hdk_semantic_indexes/rpc" }
hc_zome_dna_auth_resolver_lib = {git = "https://github.com/Connoropolous/dna-auth-resolver", rev = "2684a98c7613593e499d7f624e339254f55b8b3b", package = "hc_zome_dna_auth_resolver_lib"}
hdk_uuid_types = { path = "../hdk_uuid_types" }

[lib]
crate-type = ["lib"]
