[package]
name = "hdk_records"
version = "0.1.0"
authors = ["pospi <pospi@spadgos.com>"]
edition = "2018"

[dependencies]
thiserror = "1.0"
serde = "1"
chrono = "=0.4.6"
hdk = "0.0"
holo_hash = "0.0"

serde_maybe_undefined = { path = "../serde_maybe_undefined" }
hdk_rpc_errors = { path = "../hdk_rpc_errors" }
hdk_semantic_indexes_zome_rpc = { path = "../hdk_semantic_indexes/rpc" }
hc_zome_dna_auth_resolver_lib = {git = "https://github.com/holochain-open-dev/dna-auth-resolver", rev = "d0de3d0", package = "hc_zome_dna_auth_resolver_lib"}
hdk_uuid_types = { path = "../hdk_uuid_types" }

[lib]
crate-type = ["lib"]
