[package]
name = "hdk_records"
version = "0.1.0"
authors = ["pospi <pospi@spadgos.com>"]
edition = "2018"

[dependencies]
thiserror = "1.0"
serde = "1"
chrono = { version = "0.4.22", default-features = false, features = ["clock", "std", "oldtime", "serde"] }
hdk = "=0.0.152"
holo_hash = "0.0"

serde_maybe_undefined = { path = "../serde_maybe_undefined" }
hdk_rpc_errors = { path = "../hdk_rpc_errors" }
hdk_semantic_indexes_zome_rpc = { path = "../hdk_semantic_indexes/rpc" }
hdk_semantic_indexes_error = { path = "../hdk_semantic_indexes/error" }
hc_zome_dna_auth_resolver_lib = {git = "https://github.com/holochain-open-dev/dna-auth-resolver", rev = "812840c", package = "hc_zome_dna_auth_resolver_lib"}
hdk_uuid_types = { path = "../hdk_uuid_types" }

[lib]
crate-type = ["lib"]
