[package]
name = "hdk_rpc_errors"
version = "0.1.0"
authors = ["pospi <pospi@spadgos.com>"]
edition = "2018"

[dependencies]
thiserror = "1.0"
serde = { workspace = true }
hdk = { workspace = true }
holo_hash = { workspace = true }
hdk_semantic_indexes_error = { path = "../hdk_semantic_indexes/error" }

[lib]
crate-type = ["lib"]
