[package]
name = "hdk_time_indexing"
version = "0.1.0"
authors = ["pospi <pospi@spadgos.com>"]
edition = "2018"

[dependencies]
lazy_static = "*"
thiserror = "1.0"
chrono = "=0.4.6"
serde = "1"
hdk = "0.0.144"
hdk_semantic_indexes_core = { path = "../hdk_semantic_indexes/integrity_core" }

[lib]
crate-type = ["lib"]

[features]
internal-testing = []
