[package]
name = "hdk_time_indexing"
version = "0.1.0"
authors = ["pospi <pospi@spadgos.com>"]
edition = "2018"

[dependencies]
lazy_static = "*"
thiserror = "1.0"
chrono = { version = "0.4.22", default-features = false, features = ["clock", "std", "oldtime", "serde"] }
serde = "1"
hdk = "=0.1.0-beta-rc.1"
hdk_semantic_indexes_core = { path = "../hdk_semantic_indexes/integrity_core" }

[lib]
crate-type = ["lib"]

[features]
internal-testing = []
