[package]
name = "hdk_time_indexing"
version = "0.1.0"
authors = ["pospi <pospi@spadgos.com>"]
edition = "2018"

[dependencies]
lazy_static = "1"
thiserror = "1.0"
chrono = { workspace = true }
serde = { workspace = true }
hdk = { workspace = true }
hdk_semantic_indexes_core = { path = "../hdk_semantic_indexes/integrity_core" }

[lib]
crate-type = ["lib"]

[features]
internal-testing = []
