[package]
name = "hdk_uuid_types"
version = "0.1.0"
authors = ["pospi <pospi@spadgos.com>"]
edition = "2018"

[dependencies]
serde = "*"
hdk = "*"

# This enables .to_string() for HoloHash types using base64 encoding
holo_hash = { version = "=0.1.1",  features = ["encoding"] }

[lib]
crate-type = ["lib"]
