[package]
name = "LinkRepo"
version = "0.1.0"
authors = ["David"]
edition = "2018"
include = ["src/*"]

[dependencies]
serde = "=1.0.89"
serde_json = { version = "=1.0.39", features = ["preserve_order"] }
serde_derive = "=1.0.89"
hdk = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.14-alpha1" }
holochain_wasm_utils = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.14-alpha1" }
holochain_core_types_derive = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.14-alpha1" }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
