[package]
name = "serde_datetime_millis"
version = "0.1.0"
authors = ["pospi <pospi@spadgos.com>"]
edition = "2018"

[dependencies]
paste = "1.0"
serde = "1"
chrono = { version = "0.4", features = ["serde"] }

serde_maybe_undefined = { path = "../serde_maybe_undefined" }

[lib]
crate-type = ["lib"]
