[package]
name = "vf_actions"
version = "0.1.0"
authors = ["pospi <pospi@spadgos.com>"]
edition = "2018"

[dependencies]
serde = "1"
# :DUPE: hdk-rust-revid
hdk3 = {git = "https://github.com/holochain/holochain", rev = "d2ce21a", package = "hdk"}

vf_core = { path = "../vf_core" }

[lib]
crate-type = ["lib"]
