[package]
name = "vf_attributes_hdk"
version = "0.1.0"
authors = ["pospi <pospi@spadgos.com>"]
edition = "2018"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
holochain_serialized_bytes = { workspace = true }
holochain_zome_types = { workspace = true }
holo_hash = { workspace = true }

hdk_uuid_types = { path = "../hdk_uuid_types" }
hdk_semantic_indexes_zome_rpc = { path = "../hdk_semantic_indexes/rpc" }
hdk_records = { path = "../hdk_records" }

[lib]
crate-type = ["lib"]
