[package]
name = "vf_core"
version = "0.1.0"
authors = ["pospi <pospi@spadgos.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = "1"
holochain_serialized_bytes = "0.0.50"
holochain_zome_types = "0.0.2-alpha.1"
holo_hash = "0.0.2-alpha.1"

[lib]
crate-type = ["lib"]
