[package]
name = "vf_knowledge"
version = "0.1.0"
authors = ["pospi <pospi@spadgos.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.2.0"
# :DUPE: hdk-rust-revid
hdk = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.14-alpha1" }

vf_core = { path = "../vf_core" }

[lib]
crate-type = ["lib"]
