[package]
name = "vf_knowledge"
version = "0.1.0"
authors = ["pospi <pospi@spadgos.com>"]
edition = "2018"

[dependencies]
serde = "1.0.89"
serde_json = { version = "=1.0.39", features = ["preserve_order"] }
serde_derive = "=1.0.89"
# :DUPE: hdk-rust-revid
hdk = { git = "https://github.com/holochain/holochain-rust", branch = "release-0.0.27-alpha1" }

vf_core = { path = "../vf_core" }

[lib]
crate-type = ["lib"]
