[package]
name = "vf_measurement"
version = "0.1.0"
authors = ["pospi <pospi@spadgos.com>"]
edition = "2018"

[dependencies]
serde = "1"
holochain_serialized_bytes = "0.0.52"

vf_attributes_hdk = { path = "../vf_attributes_hdk" }
hdk_records = { path = "../hdk_records"}
hdk = "0.1.1"

[lib]
crate-type = ["lib"]
