[package]
name = "vf_measurement"
version = "0.1.0"
authors = ["pospi <pospi@spadgos.com>"]
edition = "2018"

[dependencies]
serde = "*"
holochain_serialized_bytes = "*"

vf_attributes_hdk = { path = "../vf_attributes_hdk" }
hdk_records = { path = "../hdk_records"}
hdk = "*"

[lib]
crate-type = ["lib"]
