[package]
name = "vf_measurement"
version = "0.1.0"
authors = ["pospi <pospi@spadgos.com>"]
edition = "2018"

[dependencies]
serde = { workspace = true }
holochain_serialized_bytes = { workspace = true }

vf_attributes_hdk = { path = "../vf_attributes_hdk" }
hdk_records = { path = "../hdk_records"}
hdk = { workspace = true }

[lib]
crate-type = ["lib"]
