[package]
name = "vf_observation"
version = "0.1.0"
authors = ["pospi <pospi@spadgos.com>"]
edition = "2018"

[dependencies]
serde = "1.0.89"
serde_json = { version = "=1.0.39", features = ["preserve_order"] }
serde_derive = "=1.0.89"
# :DUPE: hdk-rust-revid
hdk = "=0.0.38-alpha14"
holochain_json_derive = "=0.0.17"

hdk_graph_helpers = { path = "../hdk_graph_helpers" }
vf_core = { path = "../vf_core" }
vf_knowledge = { path = "../vf_knowledge" }

[lib]
crate-type = ["lib"]
