[package]
name = "vf_planning"
version = "0.1.0"
authors = ["pospi <pospi@spadgos.com>"]
edition = "2018"

[dependencies]
# :DUPE: hdk-rust-revid
hdk = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.14-alpha1" }

vf_core = { path = "../vf_core" }
vf_knowledge = { path = "../vf_knowledge" }

[lib]
crate-type = ["lib"]
