[package]
name = "vf_planning"
version = "0.1.0"
authors = ["pospi <pospi@spadgos.com>"]
edition = "2018"

[dependencies]
serde = "1.0.89"
serde_json = { version = "=1.0.39", features = ["preserve_order"] }
serde_derive = "=1.0.89"
# :DUPE: hdk-rust-revid
hdk = { git = "https://github.com/holochain/holochain-rust", branch = "release-0.0.26-alpha1" }

hdk_graph_helpers = { path = "../hdk_graph_helpers" }
vf_core = { path = "../vf_core" }
vf_knowledge = { path = "../vf_knowledge" }

[lib]
crate-type = ["lib"]
