[package]
name = "vf_specification"
version = "0.1.0"
authors = ["JhonatanHern <jhonatanhernandez998@gmail.com>"]
edition = "2018"

[dependencies]
serde = "=1.0.89"
serde_json = { version = "=1.0.39", features = ["preserve_order"] }
serde_derive = "=1.0.89"
hdk = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.32-alpha2" }
holochain_wasm_utils = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.32-alpha2" }
holochain_json_derive = "=0.0.17"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]