[package]
name = "hc_zome_agent_registration_hrea"
version = "0.1.0"
authors = ["pospi <pospi@spadgos.com>"]
edition = "2018"

[dependencies]
hc_zome_agent_registration = {git = "https://github.com/holochain-open-dev/agent-registration", rev = "9f52ce8", package = "hc_zome_agent_registration"}

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
