[package]
name = "hc_zome_dna_auth_resolver_hrea"
version = "0.1.0"
authors = ["pospi <pospi@spadgos.com>"]
edition = "2018"

[dependencies]
hc_zome_dna_auth_resolver = {git = "https://github.com/holochain-open-dev/dna-auth-resolver", rev = "383ca3b", package = "hc_zome_dna_auth_resolver_lib"}

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
