[package]
name = "hc_zome_dna_auth_resolver_hrea_integrity"
version = "0.1.0"
authors = ["pospi <pospi@spadgos.com>"]
edition = "2018"

[dependencies]
hc_zome_dna_auth_resolver_integrity = {git = "https://github.com/Connoropolous/dna-auth-resolver", rev = "c46a841675c1ef8b44ed79962cbea0995d0b6421", package = "hc_zome_dna_auth_resolver_integrity"}

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
