[package]
name = "hc_zome_dna_auth_resolver_hrea_integrity"
version = "0.1.0"
authors = ["pospi <pospi@spadgos.com>"]
edition = "2018"

[dependencies]
hc_zome_dna_auth_resolver_integrity = {git = "https://github.com/holochain-open-dev/dna-auth-resolver", rev = "09bf608", package = "hc_zome_dna_auth_resolver_integrity"}

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
