[package]
name = "hdk_semantic_indexes_client_lib"
version = "0.1.0"
authors = ["pospi <pospi@spadgos.com>"]
edition = "2018"

[dependencies]
paste = "1.0"
serde = "1"
hdk = "0.0.144"

hdk_records = { path = "../../hdk_records" }
hdk_semantic_indexes_zome_rpc = { path = "../rpc" }
hdk_semantic_indexes_integrity = { path = "../integrity_zome" }

[lib]
crate-type = ["lib"]
