[package]
name = "hdk_semantic_indexes_client_lib"
version = "0.1.0"
authors = ["pospi <pospi@spadgos.com>"]
edition = "2018"

[dependencies]
paste = "1.0"
serde = "1"
hdk = "0.0.144"

hdk_records = { path = "../../hdk_records" }
hdk_semantic_indexes_zome_rpc = { path = "../rpc" }
hdk_semantic_indexes_core = { path = "../integrity_core" }
hc_zome_dna_auth_resolver_lib = {git = "https://github.com/holochain-open-dev/dna-auth-resolver", rev = "d0de3d0", package = "hc_zome_dna_auth_resolver_lib"}

[lib]
crate-type = ["lib"]
