[package]
name = "hc_zome_indexing_integrity"
version = "0.1.0"
authors = ["pospi <pospi@spadgos.com>", "Wesley <wesleyfinck@gmail.com>"]
edition = "2018"

[dependencies]
serde = "*"
hdi = "*"

hdk_semantic_indexes_core = { path = "../integrity_core" }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
