[package]
name = "hdk_semantic_indexes_zome_rpc"
version = "0.1.0"
authors = ["pospi <pospi@spadgos.com>"]
edition = "2018"

[dependencies]
serde = "*"
chrono = { version = "0.4.22", default-features = false, features = ["clock", "std", "oldtime", "serde"] }
holochain_serialized_bytes = "*"
hdk_rpc_errors = { path = "../../hdk_rpc_errors" }
hdk_uuid_types = { path = "../../hdk_uuid_types" }

[lib]
crate-type = ["lib"]
