[package]
name = "hdk_semantic_indexes_zome_lib"
version = "0.1.0"
authors = ["pospi <pospi@spadgos.com>"]
edition = "2018"

[dependencies]
serde = "1"
chrono = "0.4"
hdk = "0.0"

hdk_semantic_indexes_zome_rpc = { path = "../rpc" }
hdk_rpc_errors = { path = "../../hdk_rpc_errors" }
hdk_records = { path = "../../hdk_records" }
hdk_relay_pagination = { path = "../../hdk_relay_pagination" }

serde_maybe_undefined = { path = "../../serde_maybe_undefined" }
hc_zome_dna_auth_resolver_lib = {git = "https://github.com/Connoropolous/dna-auth-resolver", rev = "2684a98c7613593e499d7f624e339254f55b8b3b", package = "hc_zome_dna_auth_resolver_lib"}
hdk_time_indexing = { path = "../../hdk_time_indexing" }

[lib]
crate-type = ["lib"]
