[package]
name = "hdk_semantic_indexes_zome_lib"
version = "0.1.0"
authors = ["pospi <pospi@spadgos.com>"]
edition = "2018"

[dependencies]
serde = "1"
chrono = "=0.4.22"
hdk = "0.0.147"

hdk_semantic_indexes_zome_rpc = { path = "../rpc" }
hdk_semantic_indexes_core = { path = "../../hdk_indexing_core" }
hdk_rpc_errors = { path = "../../hdk_rpc_errors" }
hdk_records = { path = "../../hdk_records" }
hdk_relay_pagination = { path = "../../hdk_relay_pagination" }

serde_maybe_undefined = { path = "../../serde_maybe_undefined" }
hdk_time_indexing = { path = "../../hdk_time_indexing" }

[lib]
crate-type = ["lib"]
